[Metal ANGLE] Add CPU mipmap generation for workaround on Intel devices. https://bugs.webkit.org/show_bug.cgi?id=223778

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-03-25
Reviewed by Dean Jackson.

Mipmap generation on Intel does not reliably work for textures with
width less than four. To reliably pass webGL conformance, we need
to switch to CPU mipmap generation when generating mipmaps in this
specific circumstance.

This patch fixes the following four tests on Intel
webgl/1.0.3/conformance/limits/gl-max-texture-dimensions.html
webgl/1.0.3/conformance/textures/texture-size.html
webgl/2.0.0/conformance/limits/gl-max-texture-dimensions.html
webgl/2.0.0/conformance/textures/misc/texture-size.html

* include/platform/Feature.h:
(angle::FeatureCategoryToString):
* include/platform/FeaturesMtl.h:
* src/libANGLE/renderer/metal/DisplayMtl.mm:
(rx::DisplayMtl::initializeFeatures):
* src/libANGLE/renderer/metal/TextureMtl.mm:
(rx::TextureMtl::generateMipmap):

Canonical link: https://commits.webkit.org/235785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275073 268f45cc-cd09-0410-ab3c-d52691b4dbfc